# Bounce

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README.rst  main_uml.drawio  win.cpp
bounce/: main.py
bounce/gui/: constants.py  main_ui.py
bounce/gui/components/: render_view.py
bounceRenderer/: CMakeLists.txt  Camera.h  FileAdapters.cpp  FileAdapters.h  HitableComposite.h  Iterators.h  Ray.cpp  RayTracer.cpp  bounceRenderer.sln  bounceRenderer.vcxproj  bounceRenderer.vcxproj.filters  main.cpp  mathUtils.cpp  vector3.cpp  vector3.h
bounceRenderer/include/: Accelerator.hpp  BoundingBox.hpp  Camera.h  Camera.hpp  Color.hpp  FileAdapters.h  FileAdapters.hpp  FileLoaders.hpp  Hitable.h  HitableComposite.h  Iterators.h  Light.hpp  Matrix.hpp  Point3.hpp  Ray.h  RayTracer.h  RayTracer.hpp  Scene.hpp  Shader.h  Shader.hpp  Shape.hpp  Sphere.h  Transform.hpp  TransformObject.hpp  Triangle.hpp  TriangleMesh.hpp  Vector3.hpp  mathUtils.h  vector3.h
bounceRenderer/include/accelerators/: BVH.hpp
bounceRenderer/include/adapters/: OIIOAdapter.hpp  PPMAdapter.hpp
bounceRenderer/include/core/: Accelerator.hpp  Array2d.hpp  BSDF.hpp  BoundingBox.hpp  BxDF.hpp  Camera.hpp  Color.hpp  FileAdapters.hpp  FileLoaders.hpp  Light.hpp  Material.hpp  Matrix.hpp  Point3.hpp  Ray.h  RayTracer.hpp  Sampler.hpp  Shader.hpp  Shape.hpp  Texture.hpp  TransformObject.hpp  Vector3.hpp  mathUtils.h  threading.hpp
bounceRenderer/include/fileAdapters/: PPMAdapter.hpp
bounceRenderer/include/lights/: AreaLight.hpp  DirectionalLight.hpp  DiscLight.hpp  EnvironmentLight.hpp  GradientLight.hpp  PointLight.hpp
bounceRenderer/include/loaders/: OBJLoader.hpp
bounceRenderer/include/materials/: Glass.cpp  Glass.hpp  Incandescent.hpp  Lambert.cpp  Lambert.hpp  Plastic.hpp
bounceRenderer/include/samplers/: HierarchicalAdaptive.hpp  RandomSampler.hpp
bounceRenderer/include/shapes/: Disc.hpp  Sphere.h  TriangleMesh.hpp
bounceRenderer/output/: output.ppm
bounceRenderer/ressources/geometries/: bunny.mtl
bounceRenderer/src/: Accelerator.cpp  BoundingBox.cpp  Camera.cpp  Color.cpp  FileAdapters.cpp  FileLoaders.cpp  HitableComposite.cpp  Iterators.cpp  Light.cpp  Matrix.cpp  Point3.cpp  Ray.cpp  RayTracer.cpp  Scene.cpp  Shader.cpp  Shape.cpp  Sphere.cpp  Transform.cpp  TransformObject.cpp  Triangle.cpp  TriangleMesh.cpp  Vector3.cpp  exrIO.cpp  main.cpp  mathUtils.cpp  vector3.cpp
bounceRenderer/src/accelerators/: BVH.cpp
bounceRenderer/src/core/: Accelerator.cpp  BSDF.cpp  BoundingBox.cpp  BxDF.cpp  Camera.cpp  Color.cpp  FileAdapters.cpp  FileLoaders.cpp  Iterators.cpp  Light.cpp  Material.cpp  Matrix.cpp  Point3.cpp  Ray.cpp  RayTracer.cpp  Sampler.cpp  Scene.cpp  Shader.cpp  Shape.cpp  Texture.cpp  Transform.cpp  TransformObject.cpp  Vector3.cpp  mathUtils.cpp  threading.cpp
bounceRenderer/src/fileAdapters/: OIIOAdapter.cpp  PPMAdapter.cpp
bounceRenderer/src/lights/: AreaLight.cpp  DirectionalLight.cpp  DiscLight.cpp  EnvironmentLight.cpp  GradientLight.cpp  PointLight.cpp
bounceRenderer/src/loaders/: OBJLoader.cpp
bounceRenderer/src/materials/: Glass.cpp  Lambert.cpp  Plastic.cpp
bounceRenderer/src/samplers/: HierarchicalAdaptive.cpp  RandomSampler.cpp
bounceRenderer/src/shapes/: Disc.cpp  Sphere.cpp  TriangleMesh.cpp
main/: Camera.h  FileAdapter.cpp  FileAdapter.h  Hitable.h  HitableComposite.cpp  HitableComposite.h  Iterators.cpp  Iterators.h  REPOSITORIESBouncemainimageOutputsprout.ppm  Ray.h  RayTracer.cpp  RayTracer.h  Shader.h  Sphere.cpp  Sphere.h  exrIO.cpp  main.cpp  main.sln  main.vcxproj  main.vcxproj.filters  mathUtils.h  packages.config  vector3.cpp  vector3.h
main/imageOutputs/: output.ppm  test_gradient.ppm
main/sources/: RayTracer.cpp  RayTracer.h  Sphere.cpp  Sphere.h  main.cpp  ray.h  vector3.cpp  vector3.h
renderView/: CMakeLists.txt
renderView/include/: GLShader.hpp  Shader.hpp
renderView/shaders/: screenShader.frag  screenShader.vert
renderView/src/: GLShader.cpp  Shader.cpp  main.cpp
renderViewWindows/: CMakeLists.txt
renderViewWindows/src/: main.cpp
tests/: output.ppm
